Fixes navbar to correctly display on mobile

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -35,4 +35,7 @@
     .navbar-links {
         display: none;
     }
+    #navbar {
+        display: none;
+    }
 }
